@@ -86,6 +86,8 @@ Version 1.3.1+svn:
      when ToD changes
    * more powerful [filter_location], now accepts radius=, [not], and 
      [filter] to match units at the location
+   * added [deprecated_message] so WML can also trigger the deprecated 
+     messages; used to tag macros scheduled for removal
  * user interface:
    * new sounds for user interface events
    * added the option to show warnings about deprecated WML usage
